Shanmukha: 1. Fixed IE 6, 7 & 8 Layout Issues in the below screens - Add/ List Sheet(s) - Add/ List Entry(ies)

--- a/ExpenseYesManaged/src/main/webapp/css/ExpenseYesManaged.css
+++ b/ExpenseYesManaged/src/main/webapp/css/ExpenseYesManaged.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 .body {
-	width: 98%;
+	width: 99%;
 	height: 100%;
 	margin: 5px auto;
 }
@@ -43,7 +43,7 @@ h1 {
 	background-color: #FFFEFE;
 }
 
-.form-background {
+table.form-background tbody {
 	background: rgb(255, 255, 255); /* The Fallback */
 	padding: 10px;
 	margin: 5px auto;
@@ -58,7 +58,7 @@ h1 {
 	background-color: rgba(0, 0, 0);
 	padding: 0px;
 	margin: 5px auto;
-	width: 98%;
+	width: 99%;
 	height: 30%;
 	text-align: center;
 }
@@ -188,7 +188,16 @@ ul.horizontal-list {
 	padding: 0;
 	list-style-type: none;
 	text-align: left;
+	display: inline-block;
+	word-wrap: break-word;
 }
+
+* html ul.horizontal-list li {
+	display: inline;
+} /* for IE 6 */
+*+html ul.horizontal-list li {
+	display: inline;
+} /* for IE 7 */
 
 ul.horizontal-list li.header-one {
 	color: orange;
@@ -249,6 +258,7 @@ div.sheet-container {
 	border: 1px solid black;
 	text-align: center;
 	vertical-align: middle;
+	max-width: 4em;
 }
 
 div.sheet-container div.optional-title {
@@ -311,22 +321,35 @@ a.no-underline {
 .sum-of-entries-amounts {
 	padding-right: 5px;
 }
-.sum-of-entries-amounts label{
+
+.sum-of-entries-amounts label {
 	font-weight: bold;
 }
 
 .sign-in-with-google {
 	background-image: url('images/google_icon.png'); /* 16px x 16px */
-    background-color: transparent; /* make the button transparent */
-    background-repeat: no-repeat;  /* make the background image appear only once */
-    background-position: 0px 0px;  /* equivalent to 'top left' */
-    border: none;           /* assuming we don't want any borders */
-    cursor: pointer;        /* make the cursor like hovering over an <a> element */
-    height: 16px;           /* make this the size of your image */
-    padding-left: 16px;     /* make text start to the right of the image */
-    vertical-align: middle; /* align the text vertically centered */
+	background-color: transparent; /* make the button transparent */
+	background-repeat: no-repeat;
+	/* make the background image appear only once */
+	background-position: 0px 0px; /* equivalent to 'top left' */
+	border: none; /* assuming we don't want any borders */
+	cursor: pointer;
+	/* make the cursor like hovering over an <a> element */
+	height: 16px; /* make this the size of your image */
+	padding-left: 16px; /* make text start to the right of the image */
+	vertical-align: middle; /* align the text vertically centered */
 }
 
 label.required-field {
 	font-weight: bold;
+}
+
+div.body-enclosing-container {
+	width: 99%;
+	padding: 0px;
+	margin: 10px;
+}
+
+.cursor-pointer {
+	cursor: pointer;
 }
